--- a/node/package.json
+++ b/node/package.json
@@ -7,7 +7,7 @@
     "express"     : "3.x",
     "express-hbs" : "*",
     "socket.io"   : "0.9.x",
-    "redis"       : "*",
+    "mongodb"     : "1.3.x",
     "validator"   : "3.1.x"
   }
 }
