--- a/node/package.json
+++ b/node/package.json
@@ -1,8 +1,8 @@
 {
   "name" : "dhcp-dns-config",
-  "version" : "0.1.0",
+  "version" : "0.5.0",
   "author" : "David Young",
-  "description" : "dhcp and dns config from a redis database",
+  "description" : "dhcp and dns config from a mongodb database",
   "dependencies" : {
     "express"     : "3.x",
     "express-hbs" : "*",
